--- a/WEB/InventoryManagerSystem.WEB/InventoryManagerSystem.WEB.csproj
+++ b/WEB/InventoryManagerSystem.WEB/InventoryManagerSystem.WEB.csproj
@@ -27,4 +27,8 @@
       <Folder Include="wwwroot\lib\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+    </ItemGroup>
+
 </Project>
