feat: add tracker entity, repository, service e rotas

--- a/Server/InventoryManagerSystem.Infra.Data/InventoryManagerSystem.Infra.Data.csproj
+++ b/Server/InventoryManagerSystem.Infra.Data/InventoryManagerSystem.Infra.Data.csproj
@@ -27,7 +27,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\InventoryManagerSystem.Domain\InventoryManagerSystem.Domain.csproj" />
       <ProjectReference Include="..\InventoryManagerSystem.Shared\InventoryManagerSystem.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Repositories\" />
     </ItemGroup>
 
 </Project>
