--- a/Server/InventoryManagerSystem.API/appsettings.json
+++ b/Server/InventoryManagerSystem.API/appsettings.json
@@ -13,7 +13,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Error"
     }
   },
   "AllowedHosts": "*"
