feat: feito os componentes sidebar, content da sidebar e navbar

--- a/WEB/InventoryManagerSystem.WEB/InventoryManagerSystem.WEB.csproj
+++ b/WEB/InventoryManagerSystem.WEB/InventoryManagerSystem.WEB.csproj
@@ -29,6 +29,8 @@
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+      <_ContentIncludedByDefault Remove="Layout\SideBar\Brand.razor" />
+      <_ContentIncludedByDefault Remove="Layout\SideBar\Content.razor" />
     </ItemGroup>
 
 </Project>
